Refactorización contraseña generada

--- a/404.html
+++ b/404.html
@@ -55,7 +55,7 @@
 <body>
   <h1>Página NO existe</h1>
   <p>Esta dirección de página no existe actualmente, sentimos las molestias.</p>
-  <a href="index.html">
+  <a href="index.php">
     <button>Volver al inicio</button>
   </a>
 </body>
